<resources>
    <string name="app_name">Everyday Solutions</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preference_disclaimer">preference_disclaimer</string>
    <string name="preference_about">preference_about</string>
    <string name="disclaimer_text">This software is provided as is without warranty of any kind, either express or implied, including but not limited to, the implied warranties of fitness for a purpose, or the warranty of non-infringement. Without limiting the foregoing, the developer of this software makes no warranty that: the software will meet your requirements, the software will be uninterrupted, timely, secure or error-free, the results that may be obtained from the use of the software will be effective, accurate or reliable, the quality of the software will meet your expectations, any errors in this software will be corrected.\n\n Software and its documentation made available here: could include technical or other mistakes, inaccuracies or typhographical errors. The developer of this software may make changes to the software or documentation, may be out of date, and the developer of this software makes no commitment to update such materials. The developer of this software assumes no responsibility for errors or ommisions in this software or documentation available. In no event shall the developer of this software be liable to you or any third parties for any special, punitive, incidental, indirect or consequential damages of any kind, or any damages whatsoever, including, without limitation, those resulting from loss of use, data or profits, whether or not the developer of this software has been advised of the possibility of such damages, and on any theory of liablity, arising out of or in connection with the use of this software. The use of this software is done at your own discretion and risk and with agreement that you will be solely responsible for any damage to your computer or mobile system or loss of data that results from such activities. No advice or information, whether oral of written, obtained by you from the developer of this software shall create any warranty for this software.\n\n THE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE DEVELOPER OR AUTHOR OF THIS SOFTWARE BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABLITY, WHETHER IN AN ACION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n The disclaimer of warranties and limitation of liability provided above shall be interpreted in a manner that, to the extent possible, most closely approximates an absolute disclaimer and waiver of all liability.</string>
    <string name="about_text">\"Everyday Solutions\" is an Android application which makes it easy for users to take quick notes, planning their events and getting most recent information about developments in the world. It is designed and built in a way to provide fast and compact user experience.\n\n \"Note Taker\" section of the app is an easy to use note writing functionality which lets users to write and read their notes quickly by minimizing the number of screens and taps to reach the notes.\n\n \"Planner\" section of the app lets user to add the important events in their daily or work life and show the upcoming events in a single list making it easy for the user to check their schedule. It also gives user the information about how many days left for or passed after an event added to the list.\n\n In \"World Overview\" section, user is provided with a list of links to world\'s top non-profit organizations which give information about economics, finance, business and other related developments.</string>
    <string name="error_text">Please check internet connection and try again</string>
    <string name="available_folder_text">Folder with title %1$s already available</string>
    <string name="type_folder_title_text">Please type title for folder</string>
    <string name="delete_folder_question">Delete folder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes_question">Save changes?</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="note_saved">Note saved</string>
    <string name="available_note_text">Note with title %1$s already available</string>
    <string name="type_note_title">Please type title for note</string>
    <string name="type_note">Type your note here..</string>
    <string name="delete_note_question">Delete note?</string>
    <string name="event_date">Event Date:</string>
    <string name="event_date_value">Event Date: %1$s</string>
    <string name="changes_saved">Changes saved</string>
    <string name="delete_event_question">Delete event?</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="choose_date">Choose Date</string>
    <string name="type_new_folder_title">Type New Folder Title</string>
    <string name="note_taker">Note Taker</string>
    <string name="planner">Planner</string>
    <string name="world_overview">World Overview</string>
    <string name="type_here">Type here</string>
    <string name="type_new_note_title">Type New Note Title</string>
    <string name="desription">Description:</string>
    <string name="main_board">Main Board</string>
    <string name="folder_list">Folder List</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="loading">Loading..</string>
    <string name="cant_connect_to_internet">Can\'t connect to Internet</string>
    <string name="no_folder_added_yet">No folder added yet</string>
    <string name="no_note_added_yet">No note added yet</string>
    <string name="no_event_added_yet">No event added yet</string>
    <string name="type_title_for_event">Please type a title</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="about_title">About</string>
    <string name="share_app">share_app</string>
    <string name="share_app_title">Share the app</string>
    <string name="rate_app">rate_app</string>
    <string name="rate_app_title">Rate the app</string>
    <string name="share_this_app_with">Share this app with:</string>
</resources>
